; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/ctl/extr_ctl.c_ctl_stop_lun.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/ctl/extr_ctl.c_ctl_stop_lun.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctl_be_lun = type { i64 }
%struct.ctl_lun = type { i32, i32 }

@CTL_LUN_STOPPED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ctl_stop_lun(%struct.ctl_be_lun* %0) #0 {
  %2 = alloca %struct.ctl_be_lun*, align 8
  %3 = alloca %struct.ctl_lun*, align 8
  store %struct.ctl_be_lun* %0, %struct.ctl_be_lun** %2, align 8
  %4 = load %struct.ctl_be_lun*, %struct.ctl_be_lun** %2, align 8
  %5 = getelementptr inbounds %struct.ctl_be_lun, %struct.ctl_be_lun* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to %struct.ctl_lun*
  store %struct.ctl_lun* %7, %struct.ctl_lun** %3, align 8
  %8 = load %struct.ctl_lun*, %struct.ctl_lun** %3, align 8
  %9 = getelementptr inbounds %struct.ctl_lun, %struct.ctl_lun* %8, i32 0, i32 0
  %10 = call i32 @mtx_lock(i32* %9)
  %11 = load i32, i32* @CTL_LUN_STOPPED, align 4
  %12 = load %struct.ctl_lun*, %struct.ctl_lun** %3, align 8
  %13 = getelementptr inbounds %struct.ctl_lun, %struct.ctl_lun* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = or i32 %14, %11
  store i32 %15, i32* %13, align 4
  %16 = load %struct.ctl_lun*, %struct.ctl_lun** %3, align 8
  %17 = getelementptr inbounds %struct.ctl_lun, %struct.ctl_lun* %16, i32 0, i32 0
  %18 = call i32 @mtx_unlock(i32* %17)
  ret i32 0
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
